--- a/list-games/src/components/Game.css
+++ b/list-games/src/components/Game.css
@@ -23,3 +23,9 @@
     margin: 1rem 0;
     font-weight: bold;
 }
+
+.GameCard button {
+    width: fit-content;
+    margin: 1em auto;
+    cursor: pointer;
+}
