When you click ont he button now you cna remove a card

--- a/list-games/src/components/Game.css
+++ b/list-games/src/components/Game.css
@@ -24,7 +24,7 @@
     font-weight: bold;
 }
 
-.GameCard button {
+.GameCard input {
     width: fit-content;
     margin: 1em auto;
     cursor: pointer;
