--- a/list-games/src/components/Game.css
+++ b/list-games/src/components/Game.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     padding: 1.25em;
-    width: 200px;
+    width: auto;
     border: 1px solid #f8f8f8;
     border-radius: 2px;
     box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
@@ -12,7 +12,8 @@
 
 .GameCard img {
     display: flex;
-    max-height: 300px;
+    width: auto;
+    height: 150px;
 }
 
 .GameCard figcaption {
@@ -24,7 +25,7 @@
     font-weight: bold;
 }
 
-.GameCard input {
+.GameCard button {
     width: fit-content;
     margin: 1em auto;
     cursor: pointer;
