--- a/list-games/src/components/Game.css
+++ b/list-games/src/components/Game.css
@@ -18,7 +18,6 @@
     cursor: pointer;
     background: none;
     border:none;
-    z-index: 1;
     left: 235px; 
     top: 0;
     margin-bottom: 0.5rem;
@@ -60,6 +59,7 @@
     transform: scale(1.1, 1);
 }
 
-.GameCard a {
+.GameCard div {
+    width: fit-content;
     align-self: center;
 }
